--- a/backend/package.json
+++ b/backend/package.json
@@ -15,12 +15,14 @@
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.6.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.13.2",
+    "mongoose": "^8.18.0",
     "nodemon": "^3.1.9",
     "react-router-dom": "^7.6.0",
+    "redis": "^5.8.2",
+    "twilio": "^5.8.2",
     "zod": "^3.24.3"
   }
 }
